[package]
name = "tmc-mooc-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mooc-langs-api.workspace = true
tmc-langs-util.workspace = true

bytes = "1.4.0"
chrono = "0.4.26"
log = "0.4.18"
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "multipart",
  "cookies",
] }
schemars = { version = "1.0.4", features = ["uuid1"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.3"
ts-rs = { workspace = true, features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
url = "2.2.2"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.0.2"
simple_logger = "5.0.0"

[features]
ts-rs = ["dep:ts-rs"]
