[package]
name = "tmc-testmycode-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tmc-langs-plugins.workspace = true
tmc-langs-util.workspace = true
ts-rs = { workspace = true, features = ["serde-compat"], optional = true }

chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
http = "0.2.12"
log = "0.4.14"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
once_cell = "1.9.0"
percent-encoding = "2.1.0"
regex = "1.10.6"
reqwest = { version = "0.11.27", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "multipart",
] }
schemars = { version = "0.8.8", features = ["chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
thiserror = "1.0.30"
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.0.2"
simple_logger = "5.0.0"

[features]
ts-rs = ["dep:ts-rs", "tmc-langs-util/ts-rs"]
