[package]
name = "tmc-langs-java"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
log = "0.4"
walkdir = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
j4rs = "0.12.0" # specific version to match the jar
tempfile = "3"
lazy_static = "1"
dirs = "3"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
env_logger = "0.7"
