[package]
name = "tmc-langs-make"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
tmc-langs-util = { path = "../../tmc-langs-util" }

lazy_static = "1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde-xml-rs = "0.4"
thiserror = "1"
zip = "0.5"

[dev-dependencies]
simple_logger = "2"
tempfile = "3"
walkdir = "2"
