[package]
name = "tmc-langs-make"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
tmc-langs-util = { path = "../../tmc-langs-util" }

log = "0.4.14"
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.10"
serde-xml-rs = "0.5.1"
thiserror = "1.0.30"
zip = "0.6.2"

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
walkdir = "2.3.2"
