[package]
name = "tmc-langs-notests"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }

log = "0.4"

[dev-dependencies]
simple_logger = "1"
tempfile = "3"
