[package]
name = "tmc-langs-notests"
version = "0.1.0"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
tmc-langs-util = { path = "../../tmc-langs-util" }

log = "0.4.14"
zip = { git = "https://github.com/zip-rs/zip.git", rev = "bb230ef56adc13436d1fcdfaa489249d119c498f" } # use from git until zip releases a version with zstd 0.11

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
