[package]
name = "tmc-langs-python3"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
tmc-langs-util = { path = "../../tmc-langs-util" }

dunce = "1"
hex = "0.4"
hmac = "0.12"
lazy_static = "1"
log = "0.4"
once_cell = "1"
rand = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
walkdir = "2"
zip = "0.5.4"

[dev-dependencies]
simple_logger = "2"
tempfile = "3"
