[package]
name = "tmc-langs-python3"
version = "0.1.0"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.58.1"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
tmc-langs-util = { path = "../../tmc-langs-util" }

dunce = "1.0.2"
hex = "0.4.3"
hmac = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.9.0"
rand = "0.8.4"
serde = "1.0.136"
serde_json = "1.0.78"
sha2 = "0.10.1"
thiserror = "1.0.30"
walkdir = "2.3.2"
zip = { git = "https://github.com/zip-rs/zip.git", rev = "bb230ef56adc13436d1fcdfaa489249d119c498f" } # use from git until zip releases a version with zstd 0.11

[dev-dependencies]
simple_logger = "2.1.0"
tempfile = "3.3.0"
