[package]
name = "tmc-langs-r"
version = "0.1.0"
authors = ["University of Helsinki <mooc@cs.helsinki.fi>", "Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tmc-langs-framework = { path = "../../tmc-langs-framework" }
log = "0.4"
thiserror = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
simple_logger = "1"
walkdir = "2"
tempfile = "3"
zip = "0.5"
