[package]
name = "tmc-langs-node"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "tmc_langs_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4"
serde = { version = "1", features = ["derive"] }
neon-serde = "0.4"
isolang = { version = "1", features = ["serde_serialize"] }
tmc-langs-util = { path = "../../tmc-langs-util" }
