[package]
name = "tmc-langs-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Bindings to the tmc-langs library for Node"
license.workspace = true
rust-version.workspace = true
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10.0"
default-features = false
features = ["napi-6", "default-panic-hook"]

[dependencies]
tmc-langs = { workspace = true, features = ["ts-rs"] }

base64 = "0.21.0"
env_logger = "0.10.0"
serde = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.30"
ts-rs = { git = "https://github.com/Heliozoa/ts-rs.git", rev = "6a7866228b008bab4bb03604fb404193fcbe7f74", features = [
    "serde-compat",
] }

[dev-dependencies]
log = "0.4.14"
once_cell = "1.9.0"
simple_logger = "4.0.0"
tmc-server-mock.workspace = true

[features]
ts-rs = ["tmc-langs/ts-rs"]
